@@ -1,10 +1,13 @@
 * Thu Jul 23 2009 Andrew McNab <Andrew.McNab@cern.ch>
 - Check multiple VOMS issuer certs if present, and
-  use most permissive time range they provide
+  use most permissive time range they provide to
+  resolve Bug #53497
 - Change (GRSTerrorLogFunc) to return int, to allow 
   if-less C macro using && instead.
 - Remove 2 argument open(...O_CREAT...) instance in
   grst_admin_file.c
+- Fix Bug #53314 due to change in VOMS (user cert DN 
+  vs user cert issuer's DN)
 * Fri Jul 03 2009 Andrew McNab <Andrew.McNab@cern.ch>
 - ==== GridSite version 1.7.4 ====
 * Thu Jul 02 2009 Andrew McNab <Andrew.McNab@cern.ch>
